--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2",
     "react-toast": "^1.0.3",
+    "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
     "yup": "^1.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.2",
     "@vitejs/plugin-react": "^4.3.4",
