--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-toast": "^1.0.3",
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
+    "sweetalert2": "^11.15.3",
     "yup": "^1.5.0"
   },
   "devDependencies": {
