--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
+    "html2pdf.js": "^0.10.2",
+    "jspdf": "^2.5.2",
     "otp-input-react": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
