--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@mui/styled-engine-sc": "^6.1.9",
+    "@react-google-maps/api": "^2.20.5",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
