--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "formik": "^2.4.6",
     "html2pdf.js": "^0.10.2",
     "jspdf": "^2.5.2",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.0.0",
     "otp-input-react": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^10.0.6",
     "styled-components": "^6.1.13",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/leaflet": "^1.9.16",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.14",
     "@types/react-dom": "^18.3.2",
