--- a/.github/workflows/tiffinmate-prod.yml
+++ b/.github/workflows/tiffinmate-prod.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
-        run: docker build --build-arg VITE_BASE_URL="${{ secrets.VITE_BASE_URL }}" -t fathimathusuhaila123/tiffinmate-prod .
+        run: docker build --build-arg VITE_BASE_URL="${{ secrets.VITE_BASE_URL }}" --build-arg VITE_PROVIDER_URL="${{ secrets.VITE_PROVIDER_URL }}" -t fathimathusuhaila123/tiffinmate-prod .
       - name: Publish image to docker hub
         run: docker push fathimathusuhaila123/tiffinmate-prod:latest   
 
@@ -27,4 +27,4 @@ jobs:
       - name: Delete Old Container
         run: docker rm -f reactContainer
       - name: Run docker container
-        run: docker run -d -p 3000:80 -e VITE_BASE_URL="${{ secrets.VITE_BASE_URL }}" --name reactContainer fathimathusuhaila123/tiffinmate-prod 
+        run: docker run -d -p 3000:80 -e VITE_BASE_URL="${{ secrets.VITE_BASE_URL }}" -e VITE_PROVIDER_URL="${{ secrets.VITE_PROVIDER_URL }}" --name reactContainer fathimathusuhaila123/tiffinmate-prod 
